# ferrit

./: README.md
fw/ferrit/: CMakeLists.txt
fw/ferrit/src/: drv_fram.c  drv_fram.h  ferrit.c  ferrit.h  ferrit_spi.pio  main.c  mapper.c  mapper.h  usb_descriptors.c  usb_msc.c
fw/test_bitbang/: CMakeLists.txt
fw/test_bitbang/src/: ferrit_bitbang_test.c  ferrit_pio_spi.c  ferrit_pio_spi.h  ferrit_test.c
fw/test_pio/: CMakeLists.txt
fw/test_pio/src/: ferrit_pio_spi.c  ferrit_pio_spi.h  ferrit_test.c
hw/ferrit-1/: ssx.kicad_pcb  ssx.kicad_pro  ssx.kicad_sch
hw/ferrit-16/: ssu.kicad_pcb  ssu.kicad_prl  ssu.kicad_pro  ssu.kicad_sch
hw/ferrit-cy/: sxy.kicad_pcb  sxy.kicad_prl  sxy.kicad_pro  sxy.kicad_sch
hw/ferrit-m8/: sxa.kicad_pcb  sxa.kicad_prl  sxa.kicad_pro  sxa.kicad_sch
